--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ body {
   background: var(--main-background-color);
   color: var(--main-font-color);
   font-size: 16px;
-  letter-spacing: 0.125rem;
+  letter-spacing: 0.12rem;
   line-height: 1.75rem;
   overflow-wrap: break-word;
   -webkit-font-smoothing: antialiased;
@@ -67,6 +67,7 @@ button {
   padding: 0.25rem;
   min-height: 40px;
   width: 100%;
+  letter-spacing: 0.12rem;
 }
 
 button:focus {
@@ -78,4 +79,8 @@ button:focus {
 button:hover {
   background-color: var(--main-link-color);
   color: var(--main-background-color);
+}
+
+p {
+  padding-top: 0.5rem;
 }
